force-app/main/default/objects/DC_POE_Allocation__c/DC_POE_Allocation__c.object-meta.xml
<CustomObject>
    <label>POE Allocation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POE Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>