force-app/main/default/objects/DC_POE_Allocation__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Asset allocated to this POE Allocation.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>POE Allocations</relationshipLabel>
    <relationshipName>POE_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>