force-app/main/default/objects/DC_POE_Allocation__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Floor</label>
    <referenceTo>DC_Floor__c</referenceTo>
    <relationshipLabel>POE Allocations</relationshipLabel>
    <relationshipName>POE_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>