force-app/main/default/objects/DC_POE_Allocation__c/fields/Innerduct__c.field-meta.xml
<CustomField>
    <fullName>Innerduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Innerduct feeding this POE Allocation.</description>
    <label>Innerduct</label>
    <referenceTo>Innerduct__c</referenceTo>
    <relationshipLabel>POE Allocations</relationshipLabel>
    <relationshipName>POE_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>