force-app/main/default/objects/DC_POE_Allocation__c/fields/Inside_Plant__c.field-meta.xml
<CustomField>
    <fullName>Inside_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Inside Plant feeding this POE Allocation.</description>
    <label>Inside Plant</label>
    <referenceTo>DC_Inside_Plant__c</referenceTo>
    <relationshipLabel>POE Allocations</relationshipLabel>
    <relationshipName>POE_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>