force-app/main/default/objects/DC_POE_Allocation__c/fields/POE__c.field-meta.xml
<CustomField>
    <fullName>POE__c</fullName>
    <description>The POE that this POE Allocation exists within.</description>
    <label>POE</label>
    <referenceTo>DC_POE__c</referenceTo>
    <relationshipLabel>POE Allocations</relationshipLabel>
    <relationshipName>POE_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>